--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "5.7.*",
         "laravel/socialite": "^4.1",
-        "laravel/tinker": "^1.0",
+        "laravel/tinker": "^1.0"
 
     },
     "require-dev": {
