--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,10 @@
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "5.7.*",
         "laravel/socialite": "^4.1",
-        "laravel/tinker": "^1.0"
-
+        "laravel/tinker": "^1.0",
+        "maatwebsite/excel": "^3.1",
+        "symfony/psr-http-message-bridge": "^1.1",
+        "tymon/jwt-auth": "1.0.0-rc.3"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
